# DiskLens

./: CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: release.yml
docs/plans/: 2026-02-11-disklens-design.md  PROGRESS.md
src/: app.rs  lib.rs  main.rs
src/config/: settings.rs
src/core/: analyzer.rs  cache.rs  events.rs  mod.rs  progress.rs  scanner.rs
src/export/: html.rs  json.rs  markdown.rs  mod.rs
src/models/: index.rs  mod.rs  node.rs  scan_result.rs
src/ui/: app_state.rs  input.rs  mod.rs  renderer.rs
src/ui/widgets/: breadcrumb.rs  file_list.rs  help_panel.rs  mod.rs  progress_bar.rs  ring_chart.rs  status_bar.rs
tests/: integration_test.rs
