[package]
name = "disklens"
version = "0.1.0"
edition = "2021"
description = "A high-performance disk space analyzer with TUI interface"
license = "MIT"

[dependencies]
# UI
ratatui = "0.30"
crossterm = "0.29"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
dashmap = "6.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
serde_json = "1.0"

# Error handling and logging
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# Memory optimization
smallvec = { version = "1.13", features = ["serde"] }
compact_str = { version = "0.9", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Unicode
unicode-width = "0.2.2"

# System
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
